# NLP

./: README.md  perceptron.py
CF/: README.md  itemcf.py  usercf.py
CRFWordSeg/: README.md  addTag.py  crf_segmenter.py  make_crf_model.py  run.sh  segment_word_test.py
DeepLearning/: README.md  activation functions plot.py
DeepLearning/papers/: exercise1.py  tutorial readme.txt  深度学习word2vec学习笔记.docx
DeepLearning/rnn/: BP推导及代码实例应用.docx  Discussion 汇总.doc  README.md  backpropagation.py  dropout.py  gradient_descent.py  rnn.py
DeepLearning/tf rnn/: readme.md
Expectation Maximizatio(EM)/: em_duke.py  readme.md  scipy_optimize_test.py
Information Theory/: README.md
JP phrase/: readMe.md  yinjie_bigram_phrase.py
PLSA/: ReadMe.md  plsa.py  run.sh
hmm/: README.md  hmm.py
kmeans/: build.sh  nn_kmeans_quant.py  weights_compress.cpp
ltp/: readme.txt  seg_and_pos.cpp
mahout/kmeans_test/: App.java  App_hdfs_input_mutiple.java  pom.xml
max Ent/ref/: maxEnt.py  ref_address.txt
maxProbabilitySegment/: CMakeLists.txt  maxProbabilitySegment  readme.md
maxProbabilitySegment/data/: dict.txt
maxProbabilitySegment/src/: Segmentor.cpp  Segmentor.h  main.cpp
sklearn/: sklearn_text_process.py
tensorflow/: install.txt  logistic-regression.py  readme.md  tf_test_run_reduce_softmax.py
tensorflow/Loading a TensorFlow graph with the C++ API/: load_tf_mode.cpp  readMe.md  simple_tf.sh  simple_tf_model.py
tensorflow/mnist-nn-one-layer/: input_mnist.py  mnist-one-layer.py
tiny crf/: yinjie_set.py
xgboost/: readme.md  xgb_test.py
(+9 files in other folders)
